src/test/ParGarpezpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParGarpezpp.y
-----------------------------------------------------------------------------

state 76 contains 1 shift/reduce conflicts.
state 204 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Char -> L_charac                                   (2)
	Integer -> L_integ                                 (3)
	Double -> L_doubl                                  (4)
	String -> L_quoted                                 (5)
	Program -> ListFDecl                               (6)
	FDecl -> RType Ident '(' ListParam ')' Block       (7)
	Param -> Type PassBy Ident                         (8)
	PassBy -> 'val'                                    (9)
	PassBy -> 'ref'                                    (10)
	DList -> Type ListVDecl ';'                        (11)
	DList -> 'const' ListCDecl ';'                     (12)
	VDecl -> Ident                                     (13)
	VDecl -> Ident '=' RExp                            (14)
	CDecl -> Ident '=' RExp                            (15)
	Type -> Basic Compound                             (16)
	Compound ->                                        (17)
	Compound -> Compound '[' RExp ']'                  (18)
	Compound -> Compound '*'                           (19)
	Basic -> 'bool'                                    (20)
	Basic -> 'char'                                    (21)
	Basic -> 'int'                                     (22)
	Basic -> 'float'                                   (23)
	Basic -> 'string'                                  (24)
	RType -> 'void'                                    (25)
	RType -> Basic                                     (26)
	RType -> Type '&'                                  (27)
	Block -> '{' ListDList ListStm '}'                 (28)
	Stm -> Block                                       (29)
	Stm -> Ident '(' ListRExp ')' ';'                  (30)
	Stm -> PWrite '(' RExp ')' ';'                     (31)
	Stm -> LExp AssignOp RExp ';'                      (32)
	Stm -> LExp ';'                                    (33)
	Stm -> 'if' '(' RExp ')' Stm                       (34)
	Stm -> 'if' '(' RExp ')' Stm 'else' Stm            (35)
	Stm -> 'while' '(' RExp ')' Stm                    (36)
	Stm -> 'do' Stm 'while' '(' RExp ')' ';'           (37)
	Stm -> 'for' '(' Ident '=' RExp Dir RExp ')' Stm   (38)
	Stm -> Jump ';'                                    (39)
	Dir -> 'upto'                                      (40)
	Dir -> 'downto'                                    (41)
	Jump -> 'return'                                   (42)
	Jump -> 'return' RExp                              (43)
	Jump -> 'break'                                    (44)
	Jump -> 'continue'                                 (45)
	LExp -> LExp1                                      (46)
	LExp -> '*' LExp                                   (47)
	LExp1 -> LExp2                                     (48)
	LExp1 -> LExp2 IncDecOp                            (49)
	LExp2 -> LExp3                                     (50)
	LExp2 -> IncDecOp LExp3                            (51)
	LExp3 -> LExp4                                     (52)
	LExp3 -> LExp3 '[' RExp ']'                        (53)
	LExp4 -> '(' LExp ')'                              (54)
	LExp4 -> Ident                                     (55)
	RExp -> RExp1                                      (56)
	RExp -> RExp '||' RExp1                            (57)
	RExp1 -> RExp2                                     (58)
	RExp1 -> RExp1 '&&' RExp2                          (59)
	RExp2 -> RExp3                                     (60)
	RExp2 -> '!' RExp3                                 (61)
	RExp3 -> RExp4                                     (62)
	RExp3 -> RExp3 CompOp RExp4                        (63)
	RExp4 -> RExp5                                     (64)
	RExp4 -> RExp4 '+' RExp5                           (65)
	RExp4 -> RExp4 '-' RExp5                           (66)
	RExp5 -> RExp6                                     (67)
	RExp5 -> RExp5 '*' RExp6                           (68)
	RExp5 -> RExp5 '/' RExp6                           (69)
	RExp5 -> RExp5 '%' RExp6                           (70)
	RExp6 -> RExp7                                     (71)
	RExp6 -> RExp7 '^' RExp6                           (72)
	RExp7 -> RExp8                                     (73)
	RExp7 -> SignOp RExp8                              (74)
	RExp7 -> '&' LExp                                  (75)
	RExp8 -> RExp9                                     (76)
	RExp8 -> LExp                                      (77)
	RExp9 -> RExp10                                    (78)
	RExp9 -> '[' ListRExp ']'                          (79)
	RExp9 -> Ident '(' ListRExp ')'                    (80)
	RExp9 -> PRead '(' ')'                             (81)
	RExp10 -> '(' RExp ')'                             (82)
	RExp10 -> Literal                                  (83)
	PRead -> 'readChar'                                (84)
	PRead -> 'readInt'                                 (85)
	PRead -> 'readFloat'                               (86)
	PRead -> 'readString'                              (87)
	PWrite -> 'writeChar'                              (88)
	PWrite -> 'writeInt'                               (89)
	PWrite -> 'writeFloat'                             (90)
	PWrite -> 'writeString'                            (91)
	AssignOp -> '='                                    (92)
	AssignOp -> '+='                                   (93)
	AssignOp -> '-='                                   (94)
	AssignOp -> '*='                                   (95)
	AssignOp -> '/='                                   (96)
	AssignOp -> '%='                                   (97)
	CompOp -> '<'                                      (98)
	CompOp -> '<='                                     (99)
	CompOp -> '=='                                     (100)
	CompOp -> '!='                                     (101)
	CompOp -> '>='                                     (102)
	CompOp -> '>'                                      (103)
	IncDecOp -> '++'                                   (104)
	IncDecOp -> '--'                                   (105)
	SignOp -> '+'                                      (106)
	SignOp -> '-'                                      (107)
	Literal -> Boolean                                 (108)
	Literal -> Char                                    (109)
	Literal -> Integer                                 (110)
	Literal -> Double                                  (111)
	Literal -> String                                  (112)
	Boolean -> 'false'                                 (113)
	Boolean -> 'true'                                  (114)
	ListParam ->                                       (115)
	ListParam -> Param                                 (116)
	ListParam -> Param ',' ListParam                   (117)
	ListFDecl -> FDecl                                 (118)
	ListFDecl -> FDecl ListFDecl                       (119)
	ListVDecl -> VDecl                                 (120)
	ListVDecl -> VDecl ',' ListVDecl                   (121)
	ListCDecl -> CDecl                                 (122)
	ListCDecl -> CDecl ',' ListCDecl                   (123)
	ListDList ->                                       (124)
	ListDList -> ListDList DList                       (125)
	ListStm ->                                         (126)
	ListStm -> ListStm Stm                             (127)
	ListRExp -> RExp                                   (128)
	ListRExp -> RExp ',' ListRExp                      (129)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'%='           { PT _ (TS _ 4) }
	'&'            { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'*='           { PT _ (TS _ 10) }
	'+'            { PT _ (TS _ 11) }
	'++'           { PT _ (TS _ 12) }
	'+='           { PT _ (TS _ 13) }
	','            { PT _ (TS _ 14) }
	'-'            { PT _ (TS _ 15) }
	'--'           { PT _ (TS _ 16) }
	'-='           { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	'/='           { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<'            { PT _ (TS _ 21) }
	'<='           { PT _ (TS _ 22) }
	'='            { PT _ (TS _ 23) }
	'=='           { PT _ (TS _ 24) }
	'>'            { PT _ (TS _ 25) }
	'>='           { PT _ (TS _ 26) }
	'['            { PT _ (TS _ 27) }
	']'            { PT _ (TS _ 28) }
	'^'            { PT _ (TS _ 29) }
	'bool'         { PT _ (TS _ 30) }
	'break'        { PT _ (TS _ 31) }
	'char'         { PT _ (TS _ 32) }
	'const'        { PT _ (TS _ 33) }
	'continue'     { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'downto'       { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'false'        { PT _ (TS _ 38) }
	'float'        { PT _ (TS _ 39) }
	'for'          { PT _ (TS _ 40) }
	'if'           { PT _ (TS _ 41) }
	'int'          { PT _ (TS _ 42) }
	'readChar'     { PT _ (TS _ 43) }
	'readFloat'    { PT _ (TS _ 44) }
	'readInt'      { PT _ (TS _ 45) }
	'readString'   { PT _ (TS _ 46) }
	'ref'          { PT _ (TS _ 47) }
	'return'       { PT _ (TS _ 48) }
	'string'       { PT _ (TS _ 49) }
	'true'         { PT _ (TS _ 50) }
	'upto'         { PT _ (TS _ 51) }
	'val'          { PT _ (TS _ 52) }
	'void'         { PT _ (TS _ 53) }
	'while'        { PT _ (TS _ 54) }
	'writeChar'    { PT _ (TS _ 55) }
	'writeFloat'   { PT _ (TS _ 56) }
	'writeInt'     { PT _ (TS _ 57) }
	'writeString'  { PT _ (TS _ 58) }
	'{'            { PT _ (TS _ 59) }
	'||'           { PT _ (TS _ 60) }
	'}'            { PT _ (TS _ 61) }
	L_ident        { PT _ (TV $$) }
	L_charac       { PT _ (TC $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Char            rule  2
	Integer         rule  3
	Double          rule  4
	String          rule  5
	Program         rule  6
	FDecl           rule  7
	Param           rule  8
	PassBy          rules 9, 10
	DList           rules 11, 12
	VDecl           rules 13, 14
	CDecl           rule  15
	Type            rule  16
	Compound        rules 17, 18, 19
	Basic           rules 20, 21, 22, 23, 24
	RType           rules 25, 26, 27
	Block           rule  28
	Stm             rules 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39
	Dir             rules 40, 41
	Jump            rules 42, 43, 44, 45
	LExp            rules 46, 47
	LExp1           rules 48, 49
	LExp2           rules 50, 51
	LExp3           rules 52, 53
	LExp4           rules 54, 55
	RExp            rules 56, 57
	RExp1           rules 58, 59
	RExp2           rules 60, 61
	RExp3           rules 62, 63
	RExp4           rules 64, 65, 66
	RExp5           rules 67, 68, 69, 70
	RExp6           rules 71, 72
	RExp7           rules 73, 74, 75
	RExp8           rules 76, 77
	RExp9           rules 78, 79, 80, 81
	RExp10          rules 82, 83
	PRead           rules 84, 85, 86, 87
	PWrite          rules 88, 89, 90, 91
	AssignOp        rules 92, 93, 94, 95, 96, 97
	CompOp          rules 98, 99, 100, 101, 102, 103
	IncDecOp        rules 104, 105
	SignOp          rules 106, 107
	Literal         rules 108, 109, 110, 111, 112
	Boolean         rules 113, 114
	ListParam       rules 115, 116, 117
	ListFDecl       rules 118, 119
	ListVDecl       rules 120, 121
	ListCDecl       rules 122, 123
	ListDList       rules 124, 125
	ListStm         rules 126, 127
	ListRExp        rules 128, 129

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         shift, and enter state 9
	'char'         shift, and enter state 10
	'float'        shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14

	Program        goto state 3
	FDecl          goto state 4
	Type           goto state 5
	Basic          goto state 6
	RType          goto state 7
	ListFDecl      goto state 8

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'%='           reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'*='           reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	'+='           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'-='           reduce using rule 1
	'/'            reduce using rule 1
	'/='           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'^'            reduce using rule 1
	'downto'       reduce using rule 1
	'upto'         reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListFDecl -> FDecl .                                (rule 118)
	ListFDecl -> FDecl . ListFDecl                      (rule 119)

	'bool'         shift, and enter state 9
	'char'         shift, and enter state 10
	'float'        shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	%eof           reduce using rule 118

	FDecl          goto state 4
	Type           goto state 5
	Basic          goto state 6
	RType          goto state 7
	ListFDecl      goto state 18

State 5

	RType -> Type . '&'                                 (rule 27)

	'&'            shift, and enter state 17


State 6

	Type -> Basic . Compound                            (rule 16)
	RType -> Basic .                                    (rule 26)

	'&'            reduce using rule 17
	'*'            reduce using rule 17
	'['            reduce using rule 17
	L_ident        reduce using rule 26

	Compound       goto state 16

State 7

	FDecl -> RType . Ident '(' ListParam ')' Block      (rule 7)

	L_ident        shift, and enter state 2

	Ident          goto state 15

State 8

	Program -> ListFDecl .                              (rule 6)

	%eof           reduce using rule 6


State 9

	Basic -> 'bool' .                                   (rule 20)

	'&'            reduce using rule 20
	'*'            reduce using rule 20
	'['            reduce using rule 20
	'ref'          reduce using rule 20
	'val'          reduce using rule 20
	L_ident        reduce using rule 20


State 10

	Basic -> 'char' .                                   (rule 21)

	'&'            reduce using rule 21
	'*'            reduce using rule 21
	'['            reduce using rule 21
	'ref'          reduce using rule 21
	'val'          reduce using rule 21
	L_ident        reduce using rule 21


State 11

	Basic -> 'float' .                                  (rule 23)

	'&'            reduce using rule 23
	'*'            reduce using rule 23
	'['            reduce using rule 23
	'ref'          reduce using rule 23
	'val'          reduce using rule 23
	L_ident        reduce using rule 23


State 12

	Basic -> 'int' .                                    (rule 22)

	'&'            reduce using rule 22
	'*'            reduce using rule 22
	'['            reduce using rule 22
	'ref'          reduce using rule 22
	'val'          reduce using rule 22
	L_ident        reduce using rule 22


State 13

	Basic -> 'string' .                                 (rule 24)

	'&'            reduce using rule 24
	'*'            reduce using rule 24
	'['            reduce using rule 24
	'ref'          reduce using rule 24
	'val'          reduce using rule 24
	L_ident        reduce using rule 24


State 14

	RType -> 'void' .                                   (rule 25)

	L_ident        reduce using rule 25


State 15

	FDecl -> RType Ident . '(' ListParam ')' Block      (rule 7)

	'('            shift, and enter state 21


State 16

	Type -> Basic Compound .                            (rule 16)
	Compound -> Compound . '[' RExp ']'                 (rule 18)
	Compound -> Compound . '*'                          (rule 19)

	'&'            reduce using rule 16
	'*'            shift, and enter state 19
	'['            shift, and enter state 20
	'ref'          reduce using rule 16
	'val'          reduce using rule 16
	L_ident        reduce using rule 16


State 17

	RType -> Type '&' .                                 (rule 27)

	L_ident        reduce using rule 27


State 18

	ListFDecl -> FDecl ListFDecl .                      (rule 119)

	%eof           reduce using rule 119


State 19

	Compound -> Compound '*' .                          (rule 19)

	'&'            reduce using rule 19
	'*'            reduce using rule 19
	'['            reduce using rule 19
	'ref'          reduce using rule 19
	'val'          reduce using rule 19
	L_ident        reduce using rule 19


State 20

	Compound -> Compound '[' . RExp ']'                 (rule 18)

	'!'            shift, and enter state 52
	'&'            shift, and enter state 53
	'('            shift, and enter state 54
	'*'            shift, and enter state 55
	'+'            shift, and enter state 56
	'++'           shift, and enter state 57
	'-'            shift, and enter state 58
	'--'           shift, and enter state 59
	'['            shift, and enter state 60
	'false'        shift, and enter state 61
	'readChar'     shift, and enter state 62
	'readFloat'    shift, and enter state 63
	'readInt'      shift, and enter state 64
	'readString'   shift, and enter state 65
	'true'         shift, and enter state 66
	L_ident        shift, and enter state 2
	L_charac       shift, and enter state 67
	L_integ        shift, and enter state 68
	L_doubl        shift, and enter state 69
	L_quoted       shift, and enter state 70

	Ident          goto state 26
	Char           goto state 27
	Integer        goto state 28
	Double         goto state 29
	String         goto state 30
	LExp           goto state 31
	LExp1          goto state 32
	LExp2          goto state 33
	LExp3          goto state 34
	LExp4          goto state 35
	RExp           goto state 36
	RExp1          goto state 37
	RExp2          goto state 38
	RExp3          goto state 39
	RExp4          goto state 40
	RExp5          goto state 41
	RExp6          goto state 42
	RExp7          goto state 43
	RExp8          goto state 44
	RExp9          goto state 45
	RExp10         goto state 46
	PRead          goto state 47
	IncDecOp       goto state 48
	SignOp         goto state 49
	Literal        goto state 50
	Boolean        goto state 51

State 21

	FDecl -> RType Ident '(' . ListParam ')' Block      (rule 7)

	')'            reduce using rule 115
	'bool'         shift, and enter state 9
	'char'         shift, and enter state 10
	'float'        shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13

	Param          goto state 22
	Type           goto state 23
	Basic          goto state 24
	ListParam      goto state 25

State 22

	ListParam -> Param .                                (rule 116)
	ListParam -> Param . ',' ListParam                  (rule 117)

	')'            reduce using rule 116
	','            shift, and enter state 106


State 23

	Param -> Type . PassBy Ident                        (rule 8)

	'ref'          shift, and enter state 104
	'val'          shift, and enter state 105

	PassBy         goto state 103

State 24

	Type -> Basic . Compound                            (rule 16)

	'*'            reduce using rule 17
	'['            reduce using rule 17
	'ref'          reduce using rule 17
	'val'          reduce using rule 17
	L_ident        reduce using rule 17

	Compound       goto state 16

State 25

	FDecl -> RType Ident '(' ListParam . ')' Block      (rule 7)

	')'            shift, and enter state 102


State 26

	LExp4 -> Ident .                                    (rule 55)
	RExp9 -> Ident . '(' ListRExp ')'                   (rule 80)

	'!='           reduce using rule 55
	'%'            reduce using rule 55
	'&&'           reduce using rule 55
	'('            shift, and enter state 101
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	'++'           reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'--'           reduce using rule 55
	'/'            reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'['            reduce using rule 55
	']'            reduce using rule 55
	'^'            reduce using rule 55
	'downto'       reduce using rule 55
	'upto'         reduce using rule 55
	'||'           reduce using rule 55


State 27

	Literal -> Char .                                   (rule 109)

	'!='           reduce using rule 109
	'%'            reduce using rule 109
	'&&'           reduce using rule 109
	')'            reduce using rule 109
	'*'            reduce using rule 109
	'+'            reduce using rule 109
	','            reduce using rule 109
	'-'            reduce using rule 109
	'/'            reduce using rule 109
	';'            reduce using rule 109
	'<'            reduce using rule 109
	'<='           reduce using rule 109
	'=='           reduce using rule 109
	'>'            reduce using rule 109
	'>='           reduce using rule 109
	']'            reduce using rule 109
	'^'            reduce using rule 109
	'downto'       reduce using rule 109
	'upto'         reduce using rule 109
	'||'           reduce using rule 109


State 28

	Literal -> Integer .                                (rule 110)
